gitops/apps/media/audiobookshelf/templates/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-http
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`audiobookshelf.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 80
      middlewares:
        - name: redirect-to-https
          namespace: media
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-https
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`audiobookshelf.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 80
  tls: {}
